--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-appearance": "^0.3.4",
     "react-native-image-picker": "^4.8.2",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "3.3.2",
